[tool.poetry]
name = "hunter2"
version = "0.4.0"
description = "A platform for creating and running online or event-based puzzle hunts"
authors = ["The Hunter 2 contributors"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1.3"
PyYAML = "5.3.1"
channels = "2.4.0"
channels_redis = "3.2.0"
coverage = "5.2.1"
daphne = "2.5.0"
django-allauth = "0.43.0"
django-analytical = "2.6.0"
django-autocomplete-light = "3.8.1"
django-bootstrap4 = "2.3.1"
django-debug-toolbar = "3.1.1"
django-enumfields = "2.0.0"
django-environ = "0.4.5"
django-extensions = "3.0.9"
django-fullclean = { git = "https://github.com/riconnon/django-fullclean.git", tag = "0.0.4+whitelist" }
django-nested-admin = "3.3.2"
django-ordered-model = { git = "https://github.com/fish-face/django-ordered-model.git", rev = "8a2908472b7bfbedb530a845f6c18fc86da7b750" }
django-prometheus = "2.1.0"
django-sendfile = "0.3.11"
django-solo = "1.1.3"
django-sortedm2m = "3.0.2"
django-tenants = "3.2.1"
django-webpack-loader = "0.7.0"
factory_boy = "3.1.0"
freezegun = "1.0.0"
lupa = "^1.8"
parameterized = "0.7.4"
psycopg2 = "2.8.6"
python3-openid = "3.2.0"
rules = "^2.1"
sentry-sdk = "0.19.2"
validators = "0.18.1"
wait = "0.0.3"
unittest-xml-reporting = "3.0.4"
[tool.poetry.dev-dependencies]
django-silk = "4.1.0"
ipython = "7.19.0"
ptpython = "3.0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
