[tool.poetry]
name = "hunter2"
version = "0.4.0"
description = "A platform for creating and running online or event-based puzzle hunts"
authors = ["The Hunter 2 contributors"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
lupa = "^1.8"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
